unpackaged/objects/Track__c.object
<CustomObject>
    <description>An individual song that is part of a mix.</description>
    <fields>
        <fullName>Mix__c</fullName>
        <description>Mix this track is part of.</description>
        <label>Mix</label>
        <referenceTo>Mix__c</referenceTo>
        <relationshipLabel>Tracks</relationshipLabel>
        <relationshipName>Tracks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Song__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Song for this track.</description>
        <label>Song</label>
        <referenceTo>Song__c</referenceTo>
        <relationshipLabel>Tracks</relationshipLabel>
        <relationshipName>Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Track_AutoNumber__c</fullName>
        <label>Track Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <label>Track</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>